--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -42,11 +42,11 @@
           <p class="text-white paragraph-lg font-secondary">{{site.Params.email}}</p>
         </div>
         <div class="col-md-4">
-          <h5 class="text-light">Phone</h5>
+          <h5 class="text-light">Telefon</h5>
           <p class="text-white paragraph-lg font-secondary">{{site.Params.phone}}</p>
         </div>
         <div class="col-md-4">
-          <h5 class="text-light">Address</h5>
+          <h5 class="text-light">Adresse</h5>
           <p class="text-white paragraph-lg font-secondary">{{site.Params.address}}</p>
         </div>
       </div>
